--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+body{
+  background: #F3F7F8;
+  margin-left:45px;
+  padding: auto;
+}
+.font-jakarta {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
 @utility flex-center {
   @apply flex items-center justify-center;
 }
@@ -26,6 +36,12 @@
   @apply font-medium text-xs;
 }
 
+.plus-jakarta-sans-<uniquifier> {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
 
 
 @layer components {
